--- a/index.html
+++ b/index.html
@@ -1,30 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stopwatch</title>
+    <title>TopNotch</title>
+
+    <!-- Adding a Favicon which is an icon on your tabs left hand side -->
+
+    <link rel="icon" href="https://img.icons8.com/cute-clipart/344/timer.png">
+
+    <!-- Linking External CSS file -->
+
     <link rel="stylesheet" href="styles.css">
+
+    <!-- Including Bootstrap's CSS only -->
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
+
+
 <body>
+
+    <!-- /* A div with an Id container where Each counts will be Displayed Internally */ -->
+
     <div id="container">
-        <div id="count">
-            <span class="digit" id="hr">00</span>  
+        <div id="Internal">
+
+            <!-- /* Placing Our Counts Internally in our container div using span tag */ -->
+
+            <span class="digit" id="hr">00</span>
             <span class="text">Hr</span>
-            <span class="digit" id="min">00</span>  
+            <span class="digit" id="min">00</span>
             <span class="text">Min</span>
-            <span class="digit" id="sec">00</span>  
+            <span class="digit" id="sec">00</span>
             <span class="text">Sec</span>
-            <span class="digit" id="count">00</span>  
+            <span class="digit" id="count">00</span>
         </div>
+
+        <!-- /* Making a button container where our Each buttons will be placed Inside it */ -->
+
         <div id="btn-container">
-            <button class="btn" id="start" onclick="start()">Start</button>
-            <button class="btn" id="stop"  onclick="stop()">Stop</button>
-            <button class="btn" id="reset" onclick="reset()">Reset</button>
+            <button class="btn" id="start" onclick="start()">START</button>
+            <button class="btn" id="stop" onclick="stop()">STOP</button>
+            <button class="btn" id="reset" onclick="reset()">RESET</button>
 
         </div>
     </div>
+    <!-- Linking External JavaScript file -->
+
     <script src="script.js"></script>
 </body>
+
 </html>
